Revert "Merge pull request #43606 from ballerina-platform/nutcracker"
This reverts commit f762dae768e131bbd65a8b52746edc1f66eb65c2, reversing
changes made to fc33b7551af70623b7545cac1b3f11df3692091b.